[tool.poetry]
name = "amberelectric"
version = "2.0.7"
description = "Amber Electric Public API"
authors = ["Amber Electric Development Team <dev@amber.com.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/madpilot/amberelectric.py"
keywords = ["OpenAPI", "OpenAPI-Generator", "Amber Electric Public API"]
include = ["amberelectric/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=1.10.5"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
